Task 1 completed with error-free javadoc